fixed alignment of resume link

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -67,7 +67,6 @@ h1 {
   width: 30px;
 }
 .resume {
-  margin-top: -6px;
   text-align: center;
 }
 .small {
